# celeris

./: Cargo.toml  LICENSE-MIT  README.md  test.rhai
.config/: nextest.toml
.github/workflows/: tests.yml
src/: cli.rs  config.rs  directory_manager.rs  internals_dir.rs  layout.rs  lib.rs  main.rs  manifest.rs  pdirs.rs  repo_search.rs  repos.rs  script.rs  script_manager.rs  search.rs  session_config.rs  session_manager.rs  sessions.rs  tmux.rs  tui.rs  utils.rs
src/layout/: core.rs
src/manifest/: core.rs
src/repos/: search.rs
src/script/: mlua.rs  pane.rs  session.rs  window.rs
src/script/mlua/: pane.rs  session.rs  window.rs
src/tmux/: pane.rs  session.rs  tests.rs  window.rs
src/tmux/tests/: pane.rs  session.rs  window.rs
src/tui/: fuzzy_list.rs  repo_search.rs
templates/: default.lua
templates/tests/: comptest.template.lua  generic_layout.lua  session_with_root.template.lua  test.template.lua
tests/: config.rs  repo_search.rs  session_manager.rs
tests/common/: mod.rs
