[package]
name = "sesh"
version = "0.1.0"
edition = "2024"

[dependencies]
toml = "0.8.23" 
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
dirs = "6.0.0"
git2 = "0.20.2"
color-eyre = "0.6.5"
md5 = "0.7.0"
itertools = "0.14.0"
rhai = { version = "1.22.2", features = ["sync"] }
clap = { version = "4.5.40", features = ["derive", "env"] }

[dev-dependencies]
test-with = "0.15.2"
