[package]
name = "celeris"
version = "0.1.0"
edition = "2024"
description = """
A powerful, git-aware session manager written in Rust with a dynamic control layer in lua, 
which allows for fast switching between sessions with a fuzzy picker or anything else thanks to the modular cli design.
"""
authors = ["0xsch1zo <sentientbottleofwine@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/0xsch1zo/celeris/"
repository = "https://github.com/0xsch1zo/celeris/"
keywords = ["tmux", "session manager", "tmux session manager", "cli", "git"]
categories = ["command-line-utilities"]

[[bin]]
name = "celeris"

[features]
integration_test = []

[dependencies]
toml = "0.9.5" 
serde = { version = "1.0.219", features = ["derive"] }
walkdir = "2.5.0"
dirs = "6.0.0"
git2 = "0.20.2"
color-eyre = "0.6.5"
itertools = "0.14.0"
clap = { version = "4.5.40", features = ["derive", "env"] }
delegate = "0.13.4"
ref-cast = "1.0.24"
sanitize-filename = "0.6.0"
mlua = { version = "0.11.1", features = ["luajit", "userdata-wrappers", "error-send", "serde", "macros", "vendored"] }
handlebars = { version = "6.3.2", features = ["rust-embed"] }
rust-embed = "8.7.2"

[dev-dependencies]
libtest-with = "0.8.1-10"
test-with = { version = "0.15.2", features = ["runtime"] }

[[test]]
name = "session_manager"
required-features = ["integration_test"]

